--- a/main.html
+++ b/main.html
@@ -9,8 +9,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="table-responsive">
+	<caption>List of all transcations</caption>
 	<table class="table">
-  <thead>
+  <thead class="table-dark">
     <tr>
       <th scope="col">#</th>
       <th scope="col">From</th>
@@ -37,14 +39,17 @@
 	  <td>John</td>
       <td>2000</td>
     </tr>
+	<tfoot>
 	<tr>
 		<td></td>
 		<td></td>
 		<td></td>
-		<td id="total" colspan="4">Total 4000</td>
+		<td id="total" colspan="3">Total 4000</td>
 	</tr>
+	</tfoot>
   </tbody>
 </table>
+	</div>
     <script type="text/javascript" src="./script.js">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>	
 </script>
