--- a/main.html
+++ b/main.html
@@ -3,14 +3,17 @@
 <html>
 
 <head>
+	<style>
+		.table-hover;
+	</style>
 	<link rel="stylesheet" href="styles.css">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div class="table-responsive">
 	<caption>List of all transcations</caption>
+	<div class="table-responsive">
 	<table class="table">
   <thead class="table-dark">
     <tr>
@@ -39,7 +42,7 @@
 	  <td>John</td>
       <td>2000</td>
     </tr>
-	<tfoot>
+	<tfoot class="table-light">
 	<tr>
 		<td></td>
 		<td></td>
