--- a/main.html
+++ b/main.html
@@ -3,18 +3,15 @@
 <html>
 
 <head>
-	<style>
-		.table-hover;
-	</style>
 	<link rel="stylesheet" href="styles.css">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-	<caption>List of all transcations</caption>
 	<div class="table-responsive">
-	<table class="table">
+	<caption>List of all transcations</caption>
+	<table class="table table-hover">
   <thead class="table-dark">
     <tr>
       <th scope="col">#</th>
